<resources>
    <string name="app_name">JumpTrack</string>
    <string name="versionName"> </string>
    <string name="chevron">&gt;</string>
    <string name="listicon">o</string>
    <string name="reorder">=</string>
    <string name="stopStatus">!</string>
    <string name="login">Login</string>
    <string name="newcustomerinfo">New Customer Info</string>
    <string name="routeList">Routes</string>
    <string name="distributionList">Distribution Centers</string>
    <string name="regionList">Regions</string>
    <string name="selectstop">Location List</string>
    <string name="selectinvoice">Delivery Stop</string>
    <string name="invoicedetail">Delivery</string>
    <string name="invoicedelivereddetail">Delivered Detail</string>
    <string name="signatureProcess">Signature Process</string>
    <string name="signature">Signature</string>
    <string name="signatureName">Signature Name</string>
    <string name="titleRoute">Delivery Stops</string>
    <string name="loginLabel">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="notACustomerLabel"><u>Not a Customer?</u></string>
    <string name="customerLabel">Customer</string>
    <string name="locationLabel">Location</string>
    <string name="nameLabel">Name</string>
    <string name="truckListEmptyLabel">No routes found.\n\nPlease select \'Refresh\' from the pop-up menu to reload the route list.</string>
    <string name="acceptLabel">Accept</string>
    <string name="acceptAllLabel">Accept All</string>
    <string name="of">of</string>
    <string name="signedByLabel">Signed By:</string>
    <string name="deliveredLabel">Delivered:</string>
    <string name="returnLabel">Accept Pickup</string>
    <string name="searchLabel">Search</string>
    <string name="searchActive">Searching…</string>
    <string name="searchRoutesLabel">Filter List</string>
    <string name="deleteItemLabel">Remove</string>
    <string name="addItemLabel">Add Item</string>
    <string name="doneLabel">Done</string>
    <string name="mapLabel">Map</string>
    <string name="noteLabel">Note</string>
    <string name="photoLabel">Photo</string>
    <string name="deliveryLabel">Delivery #: </string>
    <string name="addNoteLabel">Add Note</string>
    <string name="itemDetailLabel">Product</string>
    <string name="cameraButtonLabel">Photo</string>
    <string name="notesButtonLabel">Note</string>
    <string name="mapButtonLabel">Map</string>
    <string name="yourNotesLabel">Driver Note:</string>
    <string name="qtyLabel">Qty</string>
    <string name="oneLabel">1</string>
    <string name="deliveryNotesLabel">Delivery Notes</string>
    <string name="deleteLabel">Delete</string>
    <string name="warningLabel">Warning</string>
    <string name="descriptionUnavailable">Description unavailable</string>
    <string name="continueLabel">Continue</string>
    <string name="cancelSignatureLabel">Cancel signature</string>
    <string name="multipleLabel">Multiple</string>
    <string name="inTransitTabLabel">In Transit</string>
    <string name="completedTabLabel">Completed</string>
    <string name="notSyncedTabLabel">Not Synced</string>
    <string name="settings">Settings</string>
    <string name="refreshTruckList">Refresh</string>
    <string name="scan">Scan</string>
    <string name="partial_enable">Enable Partial</string>
    <string name="partial_disable">Disable Partial</string>
    <string name="reorder_item">Reorder</string>
    <string name="syncNow">Sync Now</string>
    <string name="changeTrucks">Exit Route</string>
    <string name="logout">Logout</string>
    <string name="aboutAndSupport">About &amp; Support</string>
    <string name="more">More Options</string>
    <string name="copyright">Copyright &#169; 2018-2021 ECI Software Solutions, Inc.\nAll rights reserved.</string>
    <string name="trademark"></string>
    <string name="cancel">Cancel</string>
    <string name="introParagraph">JumpTrack requires a user license that is available from ECI Software Solutions, Inc. For information on our different plans and pricing please call or email us at:</string>
    <string name="email">jumptracksales@ecisolutions.com</string>
    <string name="phoneNumber">1-800-366-4778</string>
    <string name="additionalInfoParagraph">Additional information about the JumpTrack Proof-of-Delivery system can be found on our web site at www.ecisolutions.com.</string>
    <string name="emptyUsername">Please enter your username.</string>
    <string name="emptyPassword">Please enter your password.</string>
    <string name="authenticating">Authenticating…</string>
    <string name="authenticationIncorrect">Username or password incorrect.</string>
    <string name="authenticationError">An error occurred while trying to authenticate. Please try again later.</string>
    <string name="truckListReturnWithInvoicesNotSynced">Some deliveries have not been synced. Cannot return to route list.</string>
    <string name="truckListFromServerError">An error occurred while trying to retrieve the route list. Using saved route list instead.</string>
    <string name="noInvoicesForTruck">No deliveries for this route.</string>
    <string name="deliveryItemAlreadyDelivered">The $$invoiceType$$ with id \'$$invoiceId$$\' has already been marked as completed.</string>
    <string name="deliveryItemNotFound">No invoice or RMA found with id \'$$invoiceId$$\'.</string>
    <string name="deliveryStopListFromServerError">An error occurred while trying to retrieve the location list. Please try again later.</string>
    <string name="acceptedQtyTooLarge">The quantity you entered is too large for $$packageType$$.</string>
    <string name="signatureSaveError">An error occurred while attempting to save the signature.</string>
    <string name="deliveryOverAcceptWarning">You have entered MORE THAN the loaded quantity. Do you want to mark this $$invoiceType$$ as ACCEPTED?</string>
    <string name="deliveryAcceptWarning">You did not change any of the quantities. Do you want to mark this $$invoiceType$$ as ACCEPTED?</string>
    <string name="deliveryPartiallyAcceptWarning">You changed some of the quantities. Do you want to mark this $$invoiceType$$ as PARTIALLY ACCEPTED?</string>
    <string name="deliveryRefuseWarning">You set all quantities to 0. Do you want to mark this $$invoiceType$$ as REFUSED?</string>
    <string name="stopDeliveriesWithInvoices">There are deliveries in transit</string>
    <string name="deliveriesComplete">Your deliveries are complete.</string>
    <string name="deliveriesCompleteNeedToSync">Your deliveries are complete, but some deliveries haven\'t been synced.</string>
    <string name="promptSyncSignature">There are deliveries that have not been sent to the server. Do you want to try to send again? </string>
    <string name="promptSyncPhoto">You have photos that are not synced with the server. Would you like to sync now?</string>
    <string name="promptSyncStopOrder">Stop order has not been synced with the server. Would you like to sync now?</string>
    <string name="promptSyncGPS">GPS data was not able to be sent to the server. Do you want to try to send it again? </string>
    <string name="promptSyncFailed">All data could not be synced with server. Would you like to try to sync again?</string>
    <string name="promptRelog">You have logged into another device. Log in to complete route.</string>
    <string name="emptySignatureName">Please enter a name for the signature.</string>
    <string name="unablePersistSignature">Unable to persist signature.</string>
    <string name="signatureProcessCancel">Are you sure you want to cancel this signature?</string>
    <string name="logoutConfirm">Are you sure you want to logout?</string>
    <string name="loadTruckList">Processing</string>
    <string name="noNetwork">Network unavailable. Please try again when you have a network connection.</string>
    <string name="deliveryPartialPlate">Missing %d items in delivery.\nDo you want to accept this as a partial delivery?</string>
    <string name="discardEditsTitle">Discard changes?</string>
    <string name="discardEdits">Backing out of delivery will delete your modifications and/or scans.</string>
    <string name="itemNotInDelivery">The item you scanned is not in this delivery and will be ignored.</string>
    <string name="itemAlreadyScanned">The item was already scanned and will be ignored.</string>
    <string name="maxPhotosReached">Max Photos Reached\nYou are only allowed to take %d photo(s)</string>
    <string name="finalizing">Finalizing route on server…</string>
    <string name="noNetworkProductLookup">Network Unavailable\nProduct lookup feature is not available. UPC/SKU will be saved without verification.</string>
    <string name="productNotFound">Product Not Found\nThe product code was not found. Do you still want to save it?</string>
    <string name="emptySig">Empty signature not allowed</string>
    <string name="selectPartialReasons">Select partial reasons</string>
    <string name="setScanner">Set scanner type</string>
    <string name="discardWarning">All items will be removed</string>
    <string name="unableToSaveSig">Unable to save signature</string>
    <string name="unableToAccessExternal">Unable to access external directory, attachment cannot be added</string>
    <string name="noDc">You have no distribution centers assigned. Please contact your account administrator to assign at least one distribution center to your user</string>
    <string name="routeUpdateOnServer">Route has been updated on the server.</string>
    <string name="routeUpdateOnServerMessageContent">Press OK to continue. </string>
    <string name="gps_data_no_sync">GPS tracking data</string>
    <string name="server_address_invalid_url_msg">Invalid JumpTrack URL</string>
    <string name="bluetoothConnected">Bluetooth device connected</string>
    <string name="bluetoothConnecting">Bluetooth device connecting...</string>
    <string name="bluetoothConnectedDevice">Connected to %s</string>
    <string name="feedback">Feedback</string>
    <string name="feedbackSend">Send Feedback</string>
    <string name="support">Support</string>
    <string name="aboutApp">About this app</string>
    <string name="scannerType">Scanner Type</string>
    <string name="returns">Pickups</string>
    <string name="takeReturn">Unscheduled Pickup</string>
    <string name="takeDelivery">Unscheduled Delivery</string>
    <string name="menu_scanner_type">Scanner Type</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_exit_route">Exit Route</string>
    <string name="btScan">Bluetooth Scanner</string>
    <string name="notConnected">Not Connected</string>
    <string name="noKdcFound">No KDC devices were found.\nTry turning on pairing on your scanner by going to:\nKDC Menu >\nBT Service >\nPairing</string>
    <string name="feedbackTitle">Feedback</string>
    <string name="rateAppLabel">How would you rate JumpTrack?</string>
    <string name="feedbackEmailLabel">Email (optional)</string>
    <string name="feedbackEmailHint">you@email.com</string>
    <string name="feedback1"> 1 </string>
    <string name="feedback2"> 2 </string>
    <string name="feedback3"> 3 </string>
    <string name="feedback4"> 4 </string>
    <string name="feedback5"> 5 </string>
    <string name="emailNote">If you want a response</string>
    <string name="submitFeedback">Submit feedback</string>
    <string name="signatureImage">Signature Image</string>
    <string name="enterReturnHint">Enter SKU or UPC</string>
    <string name="bad">Bad</string>
    <string name="comment">Comment</string>
    <string name="empty"></string>
    <string name="great">Great</string>
    <string name="socketMobile">Socket Mobile</string>
    <string name="companyName">Company Name</string>
    <string name="acceptDelivery">Accept Delivery</string>
    <string name="discard">Discard</string>
</resources>