<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/invoiceListSyncNowMenuItem"
        android:icon="@drawable/sync_now_icon"
        android:title="@string/syncNow"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/invoiceListEditMenuItem"
        android:icon="@drawable/ic_edit_stop_order"
        android:title="@string/reorder_item"
        app:showAsAction="always" />

    <item
        android:id="@+id/invoiceListScanMenuItem"
        android:icon="@drawable/scan_icon"
        android:title="@string/scan"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bluetoothScannerMenuItem"
        android:icon="@drawable/ic_bluetooth_red"
        android:title="@string/socketMobile"
        app:showAsAction="always" />

    <item
        android:id="@+id/unscheduledDeliveryMenuItem"
        android:icon="@drawable/delivery_icon"
        android:title="@string/takeDelivery"
        app:showAsAction="never" />

    <item
        android:id="@+id/unscheduledPickupMenuItem"
        android:icon="@drawable/returns_icon"
        android:title="@string/takeReturn"
        app:showAsAction="never" />

</menu>