<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/mainBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/feedback_title_text"
        style="@style/screenTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedbackTitle" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/feedback_question_text"
            style="@style/generalLabelBold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/rateAppLabel" >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/feedback_btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/left_button_selector"
                    android:paddingBottom="5dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="5dp"
                    android:text="@string/feedback1" />

                <TextView
                    android:id="@+id/feedback_bad_text"
                    style="@style/generalLabelSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="3dp"
                    android:text="@string/bad" />
            </LinearLayout>

            <Button
                android:id="@+id/feedback_btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/feedback2" >
            </Button>

            <Button
                android:id="@+id/feedback_btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/feedback3" >
            </Button>

            <Button
                android:id="@+id/feedback_btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="5dp"
                android:text="@string/feedback4" >
            </Button>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/feedback_btn5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/right_button_selector"
                    android:paddingBottom="5dip"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="5dp"
                    android:text="@string/feedback5" />

                <TextView
                    android:id="@+id/feedback_good_text"
                    style="@style/generalLabelSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="3dp"
                    android:text="@string/great" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/feedback_comment_lable"
            style="@style/generalLabelBold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/comment" />

        <EditText
            android:id="@+id/feedback_comment"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:gravity="top"
            android:lines="3"
            android:padding="5dp"
            android:singleLine="false"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/feedback_email_lable"
            style="@style/generalLabelBold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/feedbackEmailLabel" />

        <EditText
            android:id="@+id/feedback_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/feedbackEmailHint"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/feedback_email_note"
            style="@style/generalLabelSmall"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailNote" />

        <Button
            android:id="@+id/feedBckButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_blue"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/submitFeedback"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>