<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        style="@style/dealerLogo"
        android:layout_marginTop="@dimen/screen_margin_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/empty" />

    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dp"
        android:background="@drawable/info_border"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:id="@+id/introParagraph"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/introParagraph"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="#000000"
            android:textColorLink="@color/link_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/phoneNumber"
            android:textColor="#000000"
            android:textColorLink="@color/link_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/addtionalInfoParagraph"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/additionalInfoParagraph"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>