<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@null"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/companyNameLayout"
        style="@style/deliveryListTop"
        android:layout_width="match_parent"
        android:background="@null"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/companyName"
            style="@style/companyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/companyName" />
    </LinearLayout>
    
    <include layout="@layout/rowseparator"/>

    <EditText
        android:id="@+id/enterReturnSKU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enterReturnHint"
        android:inputType="textNoSuggestions"
        android:maxLength="20" />

    <Button
        android:id="@+id/searchReturnButton"
        style="@style/primaryButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/searchLabel"
        android:textAllCaps="false" />

</LinearLayout>
    <include layout="@layout/loading_layout" />
</FrameLayout>