<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        style="@style/deliveryListTop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:orientation="vertical">

        <TextView
            android:id="@+id/deliverySiteName"
            style="@style/companyName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/companyName" />

        <TextView
            android:id="@+id/deliverySiteAddress"
            style="@style/companyAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/deliverySiteName"
            tools:text="Address site" />

        <RelativeLayout
            android:id="@+id/deliveryTypeCnt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/deliverySiteAddress">

            <ImageView
                android:id="@+id/deliveryTypeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/deliveryDisplay"
                style="@style/deliveryNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/deliveryTypeIcon"
                android:layout_toEndOf="@+id/deliveryTypeIcon"
                android:layout_toRightOf="@+id/deliveryTypeIcon"
                android:text="@string/deliveryLabel" />

            <TextView
                android:id="@+id/deliveryNotesTxt"
                style="@style/serverNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deliveryTypeIcon"
                android:maxLength="255"
                android:text=""
                android:visibility="gone"
                tools:text="Delivery notes"
                tools:visibility="visible" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtPhotoInfo"
            style="@style/companyAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/deliveryTypeCnt"
            android:drawableStart="@drawable/camera_icon"
            android:drawableLeft="@drawable/camera_icon"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="-/-" />

        <TextView
            android:id="@+id/driverNote"
            style="@style/driverNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPhotoInfo"
            android:drawableStart="@drawable/note_icon"
            android:drawableLeft="@drawable/note_icon"
            android:drawablePadding="8dp" />

        <RelativeLayout
            android:id="@+id/signingLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/driverNote"
            android:layout_marginTop="@dimen/margin_between_buttons">

            <ImageButton
                android:id="@+id/camButton"
                android:elevation="1dp"
                android:src="@drawable/camera_icon"
                style="@style/imageButtonStyle" />

            <ImageButton
                android:id="@+id/noteButton"
                android:layout_toEndOf="@+id/camButton"
                android:layout_toRightOf="@+id/camButton"
                android:elevation="1dp"
                android:src="@drawable/note_icon"
                style="@style/imageButtonStyle" />

            <Button
                android:id="@+id/acceptButton"
                style="@style/primaryButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_toEndOf="@+id/noteButton"
                android:layout_toRightOf="@+id/noteButton"
                android:text="@string/acceptDelivery"
                android:textAllCaps="false" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/signatureLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signingLayout"
            android:visibility="gone">

            <TextView
                android:id="@+id/signatureNoteLabel"
                style="@style/detailLabelGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yourNotesLabel" />

            <TextView
                android:id="@+id/signatureNoteValue"
                style="@style/driverNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/signatureNoteLabel"
                android:layout_toRightOf="@+id/signatureNoteLabel" />

            <TextView
                android:id="@+id/signatureSigneeLabel"
                style="@style/detailLabelGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signatureNoteValue"
                android:text="@string/signedByLabel" />

            <TextView
                android:id="@+id/signatureSigneeValue"
                style="@style/deliveredInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/signatureSigneeLabel"
                android:layout_toEndOf="@+id/signatureSigneeLabel"
                android:layout_toRightOf="@+id/signatureSigneeLabel" />

            <TextView
                android:id="@+id/signatureTimeLabel"
                style="@style/detailLabelGray"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signatureSigneeValue"
                android:text="@string/deliveredLabel" />

            <TextView
                android:id="@+id/signatureTimeValue"
                style="@style/deliveredInfoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/signatureTimeLabel"
                android:layout_toEndOf="@+id/signatureTimeLabel"
                android:layout_toRightOf="@+id/signatureTimeLabel" />

            <ImageView
                android:id="@+id/signatureImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signatureTimeLabel"
                android:contentDescription="@string/signatureImage" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signatureImage">

                <LinearLayout
                    android:id="@+id/photoLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="4dp"
                    android:visibility="gone" />
            </HorizontalScrollView>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/editLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signatureLayout"
            android:orientation="horizontal"
            android:paddingTop="5dp"
            android:visibility="gone">

            <Button
                android:id="@+id/btnDeliveryCancel"
                style="@style/tertiaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dip"
                android:layout_marginRight="10dip"
                android:text="@string/discard"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btnAddline"
                style="@style/tertiaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addItemLabel"
                android:textAllCaps="false" />
        </LinearLayout>

    </RelativeLayout>
</LinearLayout>
